# sign-language-school

./: .cspell.json  .gitattributes  .gitignore  .linguist.yml  MANIFEST.in  README.md  SETUP.md  __init__.py  app.py  config.py  download_dataset.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  utils.py
static/css/: style.css
static/img/: Sign Language Learning .pptx
static/my_model/: metadata.json
templates/: about.html  base.html  contact.html  home.html  lesson.html  quiz.html  quiz_levels.html  quiz_results.html  webcam_test.html
